--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
   text-align: center;
   font-size: 20px;
   padding: 2.5%;
-  background: linear-gradient(#dbdee1, #bcd9e4);
+  background: linear-gradient(#dbdee1, #bad9e6);
   font-family: "RobotoCondensed";
 }
 
